# voxel-viewer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  README.md  settings.xml
cmake/: Dependencies.cmake
helpers/: build.bat  rebuild.bat  run.bat  setup.bat  tests.bat
src/: CMakeLists.txt  cavemap.h  main.cpp  timer.h
src/io/: binary_reader.cpp  binary_reader.h  binary_writer.cpp  binary_writer.h  file.cpp  file.h
